public/styles/main.css
/* ... */
#bgVideo{
    position: fixed;
    right: 0;
    bottom: 0;
    min-width: 100%;
    min-height: 100%;
    transform: translateX(calc((100% - 100vw) / 2));
    z-index: -1;
}

a{
    text-decoration: none;
}
hr{
    border: 2px solid #ffff00;
    width: 20%;
    margin-left: 0;
}

p{
    vertical-align: top;
    display: inline-block;
    cursor: default;
}

.backTo {
    color: #ffff00;
    font-family: 'GravurCondensed-Light', sans-serif;

    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    opacity: 1;

    -webkit-transition: opacity .5s;
    -moz-transition: opacity .5s;
    -ms-transition: opacity .5s;
    -o-transition: opacity .5s;
    transition: opacity .5s;
}
.backTo:hover {
    opacity: 0.5;
}
.backTo .small {
    letter-spacing: 0;
    font-size: 13px;
    line-height: 14px;
    text-transform: uppercase;
}
.backTo .text {
    letter-spacing: 0;
    font-size: 22px;
    line-height: 27px;
}

.closebtn {
    right: 0;
    margin-top: 20px;
    margin-right: 20px;
    display: none;
    width: 20px;
    height: 20px;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);

}

.closebtn .lines {
    stroke:#fff;
    stroke-linecap:square;
    stroke-miterlimit:10;
    stroke-width: 2px;
}
.text-hyperlink{
    text-decoration: underline !important;
}

.right{
    float: right;
}

.info-panel.open .closebtn {
    display: block;
}

form input.send {
    text-transform: uppercase;
    margin: 0;
    padding: 0;
}


/*
    Video and Lightbox styling
 */

a.lightboxVideo {
    position: relative;
    display: block;
    cursor: pointer;
}

a.lightboxVideo .overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: rgba(255, 255, 255, 0.3);
    cursor: pointer;
}

a.lightboxVideo .overlay img {
    position: absolute;
    top: 50%;
    left: 50%;
    height: auto;
    width: 25%;
    transform: translate(-50%, -50%);
    cursor: pointer;
}

/*
    START LIVE STREAM
 */
#livestream, #livestreamVideoContainer {
    color: #fff;
    font-size: 13px;
    letter-spacing: 0;
    line-height: 14px;
    text-transform: uppercase;
    font-family: 'GravurCondensed-Regular', sans-serif;

    -webkit-transition: color .5s;
    -moz-transition: color .5s;
    -ms-transition: color .5s;
    -o-transition: color .5s;
    transition: color .5s;
    width: 100%;
}
#livestream {
    display: flex;
    cursor: pointer;
    background: rgba(0, 0, 0, 0.6);
    padding: 12px 0;
    z-index: 9999;
}
#livestream:hover {
    color: rgba(255, 255, 255, 0.6);

    -webkit-transition: color .5s;
    -moz-transition: color .5s;
    -ms-transition: color .5s;
    -o-transition: color .5s;
    transition: color .5s;
}
#livestream svg {
    height: 14px;
    margin: 0 20px 0 20px;
    vertical-align: text-top;
}
#livestream .dot.animate-flicker {
    display: none;
}
#livestream .play path {
    fill: #3200ff;
}
#livestream .titlewrap, #livestreamVideoContainer .titlewrap {
    width: 100%;
    height: 13px;
    display: inline-block;
    white-space: nowrap;
    position: relative;
    overflow: hidden;
}
#livestreamVideoContainer .titlewrap {
    height: 20px;
}
#livestreamVideoContainer svg {
    height: 16px;
    display: inline-block;
}
#livestream .titlewrap .wrapper.marquee, #livestreamVideoContainer .titlewrap .wrapper.marquee {
    animation: marquee 10s linear infinite;
    display: inline-block;
    padding-left: 100%;
}
#livestream span, #livestreamVideoContainer span {
    font-family: 'GravurCondensed-Light', sans-serif;
    vertical-align: middle;
    display: inline-block;
    position: relative;
    overflow: hidden;
}
#livestream .watchnow {
    display: none;
}
#livestream .dot {
    font-size: 55px;
    font-family: sans-serif;
    vertical-align: text-top;
}
#livestreamVideoContainer iframe {
    height: 100%;
    width: 100%;
}
#livestreamVideoContainer .placeholder {
    color: #fff;
    background: #3200ff;
    height: 100%;
    width: 100%;
}
#livestreamVideoContainer .placeholder .text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
}
.lity-close {
    display: none;
}
.lity-content .closebtn {
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    width: 20px;
    height: 20px;
    cursor: pointer;
}
.lity-container {
    height: 100%;
    width: 100%;
}
#livestreamVideoContainer .flex {
    display: flex;
}
#livestreamVideoContainer .flex .left {
    flex: 1 1 auto;
    max-width: 270px;
    padding: 0 30px 40px;
    flex-wrap: wrap;
}
#livestreamVideoContainer .flex .left .bottom {
    flex: auto;
    align-self: flex-end;
}

#livestreamVideoContainer .flex .videoContainer {
    flex: 1 1 auto;
    height: calc(100vh - 35px);
}
#livestreamVideoContainer .flex iframe {
    height: 100%;
    width: 100%;
}
/*

END LIVE STREAM

 */

 /* Left sticky div*/
 .mainContent {
    display: flex;
    flex-direction: column;
    height: calc(100% - 20px);
    width: 100%;
 }
 .mainContent .leftSticky {
    cursor: pointer;
    flex: 0 0 auto;
    display: flex;
    color: #ffff00;
    flex-direction: column;
    margin-left: 20px;
    margin-top: 30px;
 }
 .mainContent .rightBox {
     margin-top: 20px;
     margin-right: 20px;
 }
 .mainContent .leftStickyHeader {
    display: flex;
    flex: 0 0 auto;
    font-family: 'GravurCondensed-Light', sans-serif;
    font-size: 22px;
    line-height: 27px;
    letter-spacing: 0;
    margin-bottom: 30px;
}

 .mainContent .leftStickyJoan {
    flex: 0 0 auto;
    flex-direction: column;
    font-family: 'GravurCondensed-Light', sans-serif;
    font-size: 22px;
    line-height: 27px;
    letter-spacing: 0;
 }
 .mainContent .leftStickyJoan .thin {
    font-family: 'GravurCondensed-Thin', sans-serif;
 }
/* ... */

